fixed css issues with wrap and background

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -7,26 +7,31 @@
 }
 
 html,body {
-    margin:0;
-    padding:0;
+    overflow: scroll;
+    background-color: lightgray;
     height: 100%;
+    width: 100vw;
+    position: absolute;
     }
 
 
 main {
-    background-color: lightgray;
+    overflow: visible;
     font-family: 'Montserrat Alternates', sans-serif;
     height: 100%;
-    padding-top: 7em;
-    overflow: hidden;
+    padding-top: 200px;
     display: flex;
-    padding-left: 55px;
+    position: relative;
+    top: 0;
+    bottom: 0;
+    width: 100vw;
 }
 
 .header {
     display: flex;
     flex-direction: flex;
     font-family: 'Montserrat Alternates', sans-serif;
+    border-bottom: 2px solid rgb(112, 3, 3);
     background: rgb(155, 153, 153);
     letter-spacing: 10px;
     font-size: 1.5em;
@@ -34,12 +39,13 @@ main {
     height: 15%;
     width: 100%;
     padding-left: 604px;
+    z-index: 1;
 }
 
 .home-button {
-    padding-top: 15px;
-    padding-left: 50px;
-    padding-right: 2em;
+    padding-top: 19px;
+    padding-left: 0px;
+    padding-right: 30em;
     position: absolute; top:0; right:0;
     font-size: 1em;
     color: #000;
@@ -48,9 +54,12 @@ main {
 }
 
 .featured-proj {
+    position: relative;
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    height: 100%;
+    top: 0;
+    bottom: 0;
     justify-content: space-around;
     padding-right: 1.5em;
     padding-top: 2em;
@@ -64,6 +73,7 @@ main {
     border: 1.5px solid rgb(112, 3, 3);
     text-align: center;
     max-width: 33.33%;
+    height: 600px;
 }
 
 .featured-text {
@@ -87,13 +97,18 @@ main {
     .text-item {
         font-size: 4vw;
     }
+
+    main {
+        width: 100vw;
+    }
     
     .text-item-header {
         font-size: 6vw;
     }
 
     .featured-img {
-        width: 100%;
+        width: 70%;
+        height: 350px;
     }
 }
 
@@ -101,11 +116,10 @@ main {
     .featured {
     display: flex;
     margin: 0 auto;
-    max-width: 1240px;
     }
 
     .featured {
-        margin: 30px auto 0;
+        margin: 0px auto 0;
     }
 
     .featured-proj {
